--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "tarun",
   "license": "ISC",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.2",
